--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,7 @@
   <title>Digital Lync LMS</title>
   <style>
     body {
-      background-color: pink !important;
+      background-color: green !important;
     }
   </style>
 </head>
